fixed the text alignment in the body and edited the about section

--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 body {
     font-family: 'Arial', sans-serif;
+    text-align: center;
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
     padding: 1em;
     text-align: center;
 }
@@ -24,7 +23,7 @@ nav ul li {
 
 nav a {
     text-decoration: none;
-    color: #fff;
+    color: #050505;
     font-weight: bold;
     font-size: 18px;
 }
